--- a/cs146-assignment-4-ning.ipynb
+++ b/cs146-assignment-4-ning.ipynb
@@ -113,8 +113,7 @@
    "source": [
     "#Generate samples from the posterior distribution for the control group.\n",
     "posterior_samples = stats.beta.rvs(a=58,b=65,size=1000)\n",
-    "test_statistics = []\n",
-    "\n",
+    "test_statistics =\n",
     "#Using the generated samples, generate a replicated dataset with the same size as the real dataset.\n",
     "#The replicated dataset is generated from the likelihood function, conditioned on the sampled θ .\n",
     "for i in posterior_samples:\n",
