included normalization constant

--- a/cs146-12.2-pre-class-work.ipynb
+++ b/cs146-12.2-pre-class-work.ipynb
@@ -323,22 +323,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.407531484044941e-27 5.966953470895751e-27\n"
+      "2.597189227719846 2.0921014389605483\n"
      ]
     }
    ],
    "source": [
     "# TASK: Approximate the mean and standard deviation of mu and sigma using\n",
     "# mu_samples, sigma_samples, and the importance weights calculated above.\n",
-    "approx_mean = np.mean(samples['mu']*importance_weights)\n",
-    "approx_std = np.mean(samples['sigma']*importance_weights)\n",
+    "z = (1.0/num_samples)*np.sum(importance_weights)\n",
+    "approx_mean = np.mean(samples['mu']*importance_weights)/z\n",
+    "approx_std = np.mean(samples['sigma']*importance_weights)/z\n",
     "print(approx_mean,approx_std)"
    ]
   }
